[gd_scene load_steps=3 format=3 uid="uid://cdl0gvlsuiyj4"]

[ext_resource type="Theme" uid="uid://cjqs21wbkhybj" path="res://scenes/ui/game_ui_theme.tres" id="1_5h873"]
[ext_resource type="Script" path="res://scenes/ui/day_night_panel.gd" id="2_i4gvd"]

[node name="DayNightPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_5h873")
script = ExtResource("2_i4gvd")

[node name="DayPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_bottom = 26.0
theme_type_variation = &"DayNightPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="DayLabel" type="Label" parent="DayPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "DAY 0"

[node name="TimePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 28.0
offset_bottom = 54.0
theme_type_variation = &"DayNightPanel"

[node name="MarginContainer" type="MarginContainer" parent="TimePanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="TimePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "07:00"
